# cot_downloader

./: example.py  pyproject.toml
cot_downloader/: __init__.py  constants.py  cot_downloader.py
